# ARMS

./: ARMS.kdev4  CMakeLists.txt  XLat.h  arms.cpp  parseInput.cpp  rmfit.cpp  rmgof.cpp  rms.cpp  rmzero.cpp
Comparator/: Comparator.cpp  Comparator.h
Data/: CMakeLists.txt  Data.cpp  Data.h
Minim/: Brent.h  Minim.cpp  Minim.h  Powell.h
Params/: CMakeLists.txt  Params.cpp  Params.h
Point/: CMakeLists.txt  Point.cpp  Point.h
RMinim/Minim/: CMakeLists.txt  Minim.cpp  Minim.h
RMinim/RanMat/: CMakeLists.txt  RanMat.cpp
RanMat/: RanMat.cpp  RanMat.h
Random/: CMakeLists.txt  rancombi.cpp  stocc.h
Simplex/: Simplex.cpp  Simplex.h
data/: b62_24_24_nu0.mat  b62_24_24_nu1.mat  b62_24_24_nu2.mat
src/: CMakeLists.txt  Comparator.cpp  Comparator.h  Data.cpp  Data.h  Discretizer.cpp  Discretizer.h  Log.cpp  Log.h  Minim.cpp  Minim.h  Params.cpp  Params.h  Point.cpp  Point.h  RanMat.cpp  RanMat.h  Simplex.cpp  Simplex.h  arms.cpp  rmfit.cpp
